# FlClash

./: .editorconfig  .gitignore  .gitleaksignore  .gitmodules  .golangci.yml  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  build.yaml  detekt.yml  pubspec.yaml  setup.dart
.github/: dependabot.yml
.github/workflows/: build.yaml  codeql.yaml  core-build.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/byedpi/: build.gradle.kts
android/byedpi/src/main/cpp/: CMakeLists.txt  native-lib.c
android/common/: build.gradle.kts
android/core/: .gitignore  build.gradle.kts
android/gradle/: libs.versions.toml
android/service/: build.gradle.kts
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
assets/data/: byedpi-geoip-default.txt  byedpi-hosts-default.txt
core/: action.go  common.go  config_apply.go  connections.go  constant.go  controller.go  crash_debug.go  crash_release.go  file_ops.go  geo_data.go  go.mod  go.sum  hub.go  lib.go  lifecycle.go  log_stream.go  probe.go  providers.go  proxies.go  server.go  tunnel_state.go
core/platform/: limit.go  procfs.go
core/tun/: tun.go
docs/: byedpi-integration.md  libmihomo-bump.md
drift_schemas/: drift_schema_v5.json
lib/: application.dart  controller.dart  state.dart
lib/byedpi/: engine.dart  geoip_list.dart  host_list.dart  model.dart  presets.dart  repository.dart  settings_store.dart
lib/clash/: clash_api_client.dart
scripts/: ffi-check.sh  lint.sh  local-build-core.sh  pre-commit.sh  wrap-unawaited.py
(+219 files in other folders)
